--- a/frontend/src/app/modules/features/employer/profile/employer-setting/employer-setting.component.html
+++ b/frontend/src/app/modules/features/employer/profile/employer-setting/employer-setting.component.html
@@ -43,12 +43,36 @@
 	  <form method="post" #companyNgForm="ngForm" [formGroup]="createCompanyForm" (ngSubmit)="onSaveComapnyInfo()">
 		<div class="container">
 		
-			<div class="col-lg-8 col-md-12  form-group">
+			<!-- <div class="col-lg-8 col-md-12  form-group">
 				<div class="form-group">
 					<label>{{"common.inviteLink" | translate}}</label>
 					<input   formControlName="invite_url" type="text" class="form-control "
 					[placeholder]="'common.inviteLink' | translate">
 				</div>
+			</div> -->
+			
+			<div class="row mt-2">
+				<div class="col-lg-12 col-md-6">
+					<label class="font-weight-bold">{{"common.inviteLink" | translate}} </label>
+					<div ></div>
+				</div>
+			</div>
+			<div class="row mt-2" *ngFor="let ticket of t.controls; let i = index; let last = last">
+				<ng-container [formGroup]="ticket">
+					<div class="col-lg-4 col-md-4">
+						<input formControlName="title"  class="form-control mt-4" type="text" placeholder="Enter the invite title">
+						<app-control-messages [control]="ticket['controls']['title']"></app-control-messages>
+					</div><div class="col-lg-5 col-md-4">
+						<input formControlName="url" class="form-control mt-4" type="text" placeholder="Enter the invite link">
+						<app-control-messages [control]="ticket['controls']['url']"></app-control-messages>
+					</div>
+					<div class="col-lg-2 col-md-4" style="top: 25px;">
+						<button type="button" class="btn btn-outline-danger"
+							style="line-height: 1.75; padding: .5rem 1.0rem;" (click)="onRemove(i)"><i class="fas fa-times"></i></button>
+						<button *ngIf="last" (click)="onDuplicate(i)" type="button" class="btn btn-outline-green ml-2"
+							style="line-height: 1.75; padding: .5rem 1.0rem;"><i class="fas fa-plus"></i></button>
+					</div>
+				</ng-container>
 			</div>
 		  </div>
 		  
@@ -60,7 +84,7 @@
 			</div>
 			<div class="col-lg-4 col-md-6">
 			  <div class="form-group">
-				<button [disabled]="(!createCompanyForm.valid && !invalidMobile ) || (createCompanyForm.value.invite_url ==null || createCompanyForm.value.invite_url.trim() =='' ) || createCompanyForm.value.invite_url.trim().split('/')[2] !=  'calendly.com'  " type="submit" class="btn btn-theme-blue btn-block btn-lg">{{"shared.submit" | translate }}</button>
+				<button [disabled]="(!createCompanyForm.valid && !invalidMobile ) " type="submit" class="btn btn-theme-blue btn-block btn-lg">{{"shared.submit" | translate }}</button>
 			  </div>
 			</div>
 		  </div>
