--- a/frontend/src/app/modules/features/employer/post-job/post-job-layout/post-job-layout.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/post-job-layout/post-job-layout.component.html
@@ -11,8 +11,10 @@
   </div>
 </section>
   <!-- //Sub Header Section -->
-<section class="my-5" style="min-height: 970px;">
+<section class="my-3" style="min-height: 970px;">
   <div class="container">
+  <h5 style="font-weight:bold">Help us serve you better!</h5><br />
+<h6>A half-completed profile is a missed opportunity. Please ensure you fill out your details completely<br /> to fit in the search criteria your potential employer is looking for!</h6><br />
     <div class="row">
       <div class="col-lg-12 tabs-animated" id="myTab">
         <form method="post" #postJobNgForm="ngForm" [formGroup]="postJobForm">
