--- a/frontend/src/app/shared/component/modal/forgot-password/forgot-password.component.html
+++ b/frontend/src/app/shared/component/modal/forgot-password/forgot-password.component.html
@@ -7,7 +7,7 @@
     </div>
     <div class="modal-body">
       <form [formGroup]="forgotPasswordForm" (ngSubmit)="onGetResetLink()">
-        <h5 class="my-4" *ngIf="!isMailSent">Don't worry! Just fill your email and we'll send you a link to reset your password</h5>
+        <h5 class="my-4" *ngIf="!isMailSent">Not to worry. Just fill in your email address. We shall send you a link to reset your password</h5>
 
         <p class="text-green mx-auto pt-1" *ngIf="isMailSent">
           <i style="font-size: 20px;" class="far fa-thumbs-up"></i>
