--- a/frontend/src/app/shared/component/modal/register-form/register-form.component.html
+++ b/frontend/src/app/shared/component/modal/register-form/register-form.component.html
@@ -5,9 +5,9 @@
     class="modal-title" id="registerModalLabel">{{sharedService.getCurrentRoleFromUrl()?.roleId == 1 ? 'Recruiter' : 'Jobseeker'}} Registration</h5>
     <button (click)="onClickCloseBtn(false)" type="button" class="close" data-dismiss="modal" aria-label="Close">
       <span aria-hidden="true">×</span>
-    </button>
-  </div>
+    </button>  </div>
   <div class="modal-body">
+  <p>{{sharedService.getCurrentRoleFromUrl()?.roleId == 1 ? 'You have made the right decision. You are just a step away from hiring the best potential talent. Fill in and move forward' : 'Not to worry. Just fill in your email address. We shall send you a link to reset your password'}}</p>
     <form method="post" [formGroup]="registerForm" (ngSubmit)="register()">
       <div class="form-group">
         <label>{{"shared.firstName" | translate }}</label>
