--- a/frontend/src/app/modules/auth/employer-auth/employer-login/employer-login.component.html
+++ b/frontend/src/app/modules/auth/employer-auth/employer-login/employer-login.component.html
@@ -27,7 +27,7 @@
         <div class="section-title text-left mb-4 pr-5">
           <!-- <h6 class="text-white">SAP World Employer</h6> -->
           <h3 class="text-white">Is your candidate selection process taking too long?</h3>
-          <h5 class="text-white">Save time in screening CVs and pre-qualifying interviews. Compare profiles, find missing skillset, match on relevancy. We serve you what is needed as a platter.
+          <h5 class="text-white">Save time in screening CVs and pre-qualifying interviews. Compare profiles, find missing skillset, match on relevancy. We serve you what is needed as a platter
           </h5>
           <a class="btn btn-lg btn-theme-blue rounded-pill px-4" href="#" style="margin-top:10px;"  role="button">View More
           <i class="fas fa-angle-double-right ml-3 align-middle animate__animated animate__heartBeat animate__infinite animate__slow	2s"></i>
@@ -59,7 +59,7 @@
         <div class="content-left">
           <!-- <h6>SAP World Employer</h6> -->
           <h3>Craft your Requirement. Get perfect Matches.</h3>
-          <h5>SAP World offers a way to completely save time in screening the required candidature. Post your Requirements effortlessly, find exact matching candidates, make data-driven screening decisions and compare profiles of applied SAP candidates for picking the right fit. 
+          <h5>SAP World offers a way to completely save time in screening the required candidature. Post your Requirements effortlessly, find exact matching candidates, make data-driven screening decisions and compare profiles of applied SAP candidates for picking the right fit 
           </h5>
 
           <a class="btn btn-lg btn-theme-blue rounded-pill px-4" href="#" role="button">Get Started
@@ -73,7 +73,7 @@
         <div class="content-right">
          <!--  <h6>SAP World Employer</h6> -->
           <h3>SAP Recruiting is easy. Get the Perfect Match Candidature </h3>
-          <h5>A platform perfectly crafted for SAP Recruiters. Get instant matches to your must-have and good-to-have skillset. Make accurate decisions by comparing similar pattern profiles. 
+          <h5>A platform perfectly crafted for SAP Recruiters. Get instant matches to your must-have and good-to-have skillset. Make accurate decisions by comparing similar pattern profiles
           </h5>
 
           <a class="btn btn-lg btn-theme-blue rounded-pill px-4" href="#" role="button">Get Started
