--- a/frontend/src/app/modules/features/common/landing/landing.component.html
+++ b/frontend/src/app/modules/features/common/landing/landing.component.html
@@ -65,7 +65,7 @@
         <div class="section-title">
           <h1>Our Happy Clients</h1>
           <span class="section-title-bg">Employer </span>
-          <h5>We have brought candidates closer to them. From start-ups to SMEs and large corporations, we ensure we scrutinize and shortlist the right candidate they were longing for.</h5>
+          <h5>We have brought candidates closer to them. From start-ups to SMEs and large corporations, we ensure we scrutinize and shortlist the right candidate they were longing for</h5>
         </div>
       </div>
     </div>
@@ -132,7 +132,7 @@
 								<img src="assets/images/sapw-info-icon1.png" class="mr-3">
 								<div class="media-body">
 									<h3 class="mt-0">Matches</h3>
-									<p>You are viewed based on must-have and good to have skillsets.</p>
+									<p>You are viewed based on must-have and good to have skillsets</p>
 								</div>
 							</div>
 						</div>
@@ -141,7 +141,7 @@
 								<img src="assets/images/sapw-info-icon2.png" class="mr-3">
 								<div class="media-body">
 									<h3 class="mt-0">Compare profiles</h3>
-									<p>Compare the opportunities and pick what suits your candidature.</p>
+									<p>Compare the opportunities and pick what suits your candidature</p>
 								</div>
 							</div>
 						</div>
@@ -152,7 +152,7 @@
 								<img src="assets/images/sapw-info-icon3.png" class="mr-3">
 								<div class="media-body">
 									<h3 class="mt-0">User-friendly Dashboard</h3>
-									<p> Know matching opportunities, availability, pick what suits you the best.</p>
+									<p> Know matching opportunities, availability, pick what suits you the best</p>
 								</div>
 							</div>
 						</div>
@@ -161,7 +161,7 @@
 								<img src="assets/images/sapw-info-icon4.png" class="mr-3">
 								<div class="media-body">
 									<h3 class="mt-0">Complete Access</h3>
-									<p>Manage your profile with what you want to show online and whatnot.</p>
+									<p>Manage your profile with what you want to show online and whatnot</p>
 								</div>
 							</div>
 						</div>
@@ -179,7 +179,7 @@
 				<div class="col-lg-12">
 					<div class="section-title">
 						<h1>Get in touch with us</h1>
-						<h5>Looking for something more? Let’s talk. We’d love to hear from you. Write to us and our executive shall stay in touch.</h5>
+						<h5>Looking for something more? Let’s talk. We’d love to hear from you. Write to us and our executive shall stay in touch</h5>
 						<span class="section-title-bg">CONTACT </span>
 						<h5>&nbsp;</h5>
 					</div>
