Text and image changes

--- a/frontend/src/app/modules/auth/employer-auth/employer-login/employer-login.component.html
+++ b/frontend/src/app/modules/auth/employer-auth/employer-login/employer-login.component.html
@@ -25,9 +25,9 @@
     <div class="row">
       <div class="col-lg-5">
         <div class="section-title text-left mb-4 pr-5">
-          <h6 class="text-white">SAP World Employer</h6>
-          <h3 class="text-white">Video Title Content</h3>
-          <h5 class="text-white">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.
+          <!-- <h6 class="text-white">SAP World Employer</h6> -->
+          <h3 class="text-white">Is your candidate selection process taking too long?</h3>
+          <h5 class="text-white">Save time in screening CVs and pre-qualifying interviews. Compare profiles, find missing skillset, match on relevancy. We serve you what is needed as a platter
           </h5>
           <a class="btn btn-lg btn-theme-blue rounded-pill px-4" href="#" style="margin-top:10px;"  role="button">View More
           <i class="fas fa-angle-double-right ml-3 align-middle animate__animated animate__heartBeat animate__infinite animate__slow	2s"></i>
@@ -58,10 +58,8 @@
       <div class="col-lg-6">
         <div class="content-left">
           <!-- <h6>SAP World Employer</h6> -->
-          <h3>Craft your requirement </h3>
-          <h5>Post your requirements effortlessly <br>
-		  Manage the essential skills you expect from the talent  <br>
-			We guaranty effective talent matches with the right set of information
+          <h3>Craft your Requirement. Get perfect Matches.</h3>
+          <h5>SAP World offers a way to completely save time in screening the required candidature. Post your Requirements effortlessly, find exact matching candidates, make data-driven screening decisions and compare profiles of applied SAP candidates for picking the right fit 
           </h5>
 
           <a class="btn btn-lg btn-theme-blue rounded-pill px-4" href="#" role="button">Get Started
@@ -74,9 +72,8 @@
       <div class="col-lg-6  ml-auto">
         <div class="content-right">
          <!--  <h6>SAP World Employer</h6> -->
-          <h3>Get not just matches, Get THE MATCHES </h3>
-          <h5>Get instant matches based on your Required, Desired and Nice to have 
-Improve your decision accuracy in talent shortlist
+          <h3>SAP Recruiting is easy. Get the Perfect Match Candidature </h3>
+          <h5>A platform perfectly crafted for SAP Recruiters. Get instant matches to your must-have and good-to-have skillset. Make accurate decisions by comparing similar pattern profiles
           </h5>
 
           <a class="btn btn-lg btn-theme-blue rounded-pill px-4" href="#" role="button">Get Started
@@ -99,11 +96,8 @@ Improve your decision accuracy in talent shortlist
       <div class="col-lg-6">
         <div class="content-left">
           <!-- <h6>SAP World Employer</h6> -->
-          <h3>Its not just resume, its the work that needs attention  </h3>
-          <h5>You will not just be told you've got a match.
-Find every details against your curated requirements
-Compare multiple talents against your job
-You can do all those before viewing the resume.
+          <h3>Screening and choosing the Right Profile without any hassles</h3>
+          <h5>Look and compare every detail of the requirement and skill set you are looking for in a potential talent. View perfectly matching skillset, missing skills as well as “good to have'' skill sets
           </h5>
 
           <a class="btn btn-lg btn-theme-blue rounded-pill px-4" href="#" role="button">Get Started
