--- a/frontend/src/app/modules/auth/user-auth/user-login/user-login.component.html
+++ b/frontend/src/app/modules/auth/user-auth/user-login/user-login.component.html
@@ -35,10 +35,10 @@
     <div class="row">
       <div class="col-lg-5">
         <div class="section-title text-left mb-4 pr-5">
-          <h6 class="text-white">SAP World Jobseeker</h6>
-          <h3 class="text-white">Video Title Content</h3>
-          <h5 class="text-white">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.
-          </h5>
+          <h6 class="text-white">Plan your SAP career in the right place</h6>
+          <h3 class="text-white">Where Potential Talent Gets Great Opportunities!</h3>
+          <h5 class="text-white">Are you interested in furthering your career in SAP, and curious as to what suitable jobs are out there for you? SAP World can help you with the right career opportunities with exclusive search criteria-based job opportunities. It is not just one among the other job portals trying to find opportunities for you that may or may not be a right fit. Know how? Watch the video
+          </h5><br/>
           <a class="btn btn-lg btn-theme-blue rounded-pill px-4" href="#" role="button">View More
           <i class="fas fa-angle-double-right ml-3 align-middle animate__animated animate__heartBeat animate__infinite animate__slow	2s"></i>
           </a>
@@ -66,8 +66,8 @@
       <div class="col-lg-6">
         <div class="content-left">
           <h6>SAP World Jobseeker</h6>
-          <h3>First Heading Content </h3>
-          <h5>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text. It has survived not only five centuries, but also the leap into electronic typesetting.
+          <h3>Find the Right Job. Right Now </h3>
+          <h5>Make a personalized search exclusively picked for your candidature. Get perfect Job Requirement that matches your skillset and apply for them. An exclusive Job Portal for SAP profiles that helps you get you the right job based on your hands-on skill set
           </h5>
 
           <a class="btn btn-lg btn-theme-blue rounded-pill px-4" href="#" role="button">Get Started
@@ -80,8 +80,8 @@
       <div class="col-lg-6  ml-auto">
         <div class="content-right">
           <h6>SAP World Jobseeker</h6>
-          <h3>Second  Heading Content </h3>
-          <h5>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
+          <h3>Exclusive Profile Update</h3>
+          <h5>A Fully Completed profile gives you a higher percentage of potential opportunities. Keep your profile information up to date to ensure the recruiters knock up to you for great fit opportunities
           </h5>
 
           <a class="btn btn-lg btn-theme-blue rounded-pill px-4" href="#" role="button">Get Started
@@ -104,8 +104,8 @@
       <div class="col-lg-6">
         <div class="content-left">
           <h6>SAP World Jobseeker</h6>
-          <h3>Third  Heading Content </h3>
-          <h5>On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble.
+          <h3>Check your personalized recommendations </h3>
+          <h5>Job recommendations based on match score between your resume content and our job database. You are given the exact and nearest matches to compare and choose from. Jobs are recommended based on real-time job Description
           </h5>
 
           <a class="btn btn-lg btn-theme-blue rounded-pill px-4" href="#" role="button">Get Started
