--- a/frontend/src/app/modules/features/common/landing/landing.component.html
+++ b/frontend/src/app/modules/features/common/landing/landing.component.html
@@ -40,14 +40,14 @@
 				<div class="col-lg-6">			
 					<div class="left-sec animate__animated  animate__fadeInLeft">					
 						<h1>Employer</h1>
-						<p>Get used to the hassle-free Talent finding Platform. Get real time matches in no time! </p>
+						<p>An hassle-free SAP talent finding platform. Make your hiring decisions faster and easier</p>
 						<a (click)="onRedirectUrl('/auth/employer/login')" class="btn empl-btn my-3">Get Started</a>
 					</div>
 				</div>
 				<div class="col-lg-6">	
 					<div class="right-sec animate__animated  animate__fadeInRight">						
 						<h1>Talent</h1>
-						<p>When we say matching jobs, we literally meant matches</p>
+						<p>Make your career move with confidence. A Job Portal built on advice of SAP domain experts</p>
 						<a (click)="onRedirectUrl('/auth/user/login')"  class="btn tale-btn my-3">Get Started</a>
 					</div>
 				</div>	
@@ -63,9 +63,9 @@
     <div class="row">
       <div class="col-lg-12">
         <div class="section-title">
-          <h1>Top Company Registered</h1>
+          <h1>Our Happy Clients</h1>
           <span class="section-title-bg">Employer </span>
-          <h5>Some of the companies we've helped recruit excellent applicants over the years.</h5>
+          <h5>We have brought candidates closer to them. From start-ups to SMEs and large corporations, we ensure we scrutinize and shortlist the right candidate they were longing for</h5>
         </div>
       </div>
     </div>
@@ -122,8 +122,8 @@
 			<div class="row">
 				<div class="col-lg-8">
 					<div class="heading">
-						<h1>Solving recruitment sensibly</h1>
-						<h5>Study says employer make up their mind in 7.4 seconds for screening a profile. We deliver the much-needed details in a platter.</h5>
+						<h1>Your SAP Job Search Expert</h1>
+						<h5>Find jobs, create a search -friendly profile and enrich your applications. Here is how we can help you with getting your dream job!</h5>
 						
 					</div>
 					<div class="mt-5 d-flex">
@@ -132,7 +132,7 @@
 								<img src="assets/images/sapw-info-icon1.png" class="mr-3">
 								<div class="media-body">
 									<h3 class="mt-0">Matches</h3>
-									<p>View matches based on your must have, good to have, optional</p>
+									<p>You are viewed based on must-have and good to have skillsets</p>
 								</div>
 							</div>
 						</div>
@@ -140,8 +140,8 @@
 							<div class="media">
 								<img src="assets/images/sapw-info-icon2.png" class="mr-3">
 								<div class="media-body">
-									<h3 class="mt-0">Compare profile</h3>
-									<p>Compare multiple profiles, jobs in a single view</p>
+									<h3 class="mt-0">Compare profiles</h3>
+									<p>Compare the opportunities and pick what suits your candidature</p>
 								</div>
 							</div>
 						</div>
@@ -151,8 +151,8 @@
 							<div class="media">
 								<img src="assets/images/sapw-info-icon3.png" class="mr-3">
 								<div class="media-body">
-									<h3 class="mt-0">Holistic view</h3>
-									<p> View whats missing, whats matching and whats more in a profile against your post </p>
+									<h3 class="mt-0">User-friendly Dashboard</h3>
+									<p> Know matching opportunities, availability, pick what suits you the best</p>
 								</div>
 							</div>
 						</div>
@@ -160,8 +160,8 @@
 							<div class="media">
 								<img src="assets/images/sapw-info-icon4.png" class="mr-3">
 								<div class="media-body">
-									<h3 class="mt-0">Full control</h3>
-									<p>Manage your profile what to display and what not to </p>
+									<h3 class="mt-0">Complete Access</h3>
+									<p>Manage your profile with what you want to show online and whatnot</p>
 								</div>
 							</div>
 						</div>
@@ -179,6 +179,7 @@
 				<div class="col-lg-12">
 					<div class="section-title">
 						<h1>Get in touch with us</h1>
+						<h5>Looking for something more? Let’s talk. We’d love to hear from you. Write to us and our executive shall stay in touch</h5>
 						<span class="section-title-bg">CONTACT </span>
 						<h5>&nbsp;</h5>
 					</div>
