Multi-language adding in the SAP with the text changes

--- a/frontend/src/app/modules/features/common/home/home.component.html
+++ b/frontend/src/app/modules/features/common/home/home.component.html
@@ -39,16 +39,16 @@
 			<div class="row">	
 				<div class="col-lg-6">			
 					<div class="left-sec animate__animated  animate__fadeInLeft">					
-						<h1>Employer</h1>
-						<p>Get used to the hassle-free Talent finding Platform. Get real time matches in no time! </p>
-						<a (click)="onRedirectUrl('/auth/employer/login')" class="btn empl-btn my-3">Get Started</a>
+						<h1> {{"homePage.title" | translate }}  </h1>
+						<p> {{"homePage.content1" | translate }} </p>
+						<a (click)="onRedirectUrl('/auth/employer/login')" class="btn empl-btn my-3">{{"homePage.getStarted" | translate }}</a>
 					</div>
 				</div>
 				<div class="col-lg-6">	
 					<div class="right-sec animate__animated  animate__fadeInRight">						
-						<h1>Talent</h1>
-						<p>When we say matching jobs, we literally meant matches</p>
-						<a (click)="onRedirectUrl('/auth/user/login')"  class="btn tale-btn my-3">Get Started</a>
+						<h1> {{"homePage.talent" | translate }}</h1>
+						<p>{{"homePage.content2" | translate }}</p>
+						<a (click)="onRedirectUrl('/auth/user/login')"  class="btn tale-btn my-3">{{"homePage.getStarted" | translate }}</a>
 					</div>
 				</div>	
 			</div>
@@ -63,9 +63,9 @@
     <div class="row">
       <div class="col-lg-12">
         <div class="section-title">
-          <h1>Top Company Registered</h1>
-          <span class="section-title-bg">Employer </span>
-          <h5>Some of the companies we've helped recruit excellent applicants over the years.</h5>
+          <h1> {{"homePage.clientsHeading" | translate }} </h1>
+          <span class="section-title-bg">{{"homePage.title" | translate }}  </span>
+          <h5> {{"homePage.content3" | translate }} </h5>
         </div>
       </div>
     </div>
@@ -122,8 +122,8 @@
 			<div class="row">
 				<div class="col-lg-8">
 					<div class="heading">
-						<h1>Solving recruitment sensibly</h1>
-						<h5>Study says employer make up their mind in 7.4 seconds for screening a profile. We deliver the much-needed details in a platter.</h5>
+						<h1>{{"homePage.content4" | translate }} </h1>
+						<h5>{{"homePage.content5" | translate }} </h5>
 						
 					</div>
 					<div class="mt-5 d-flex">
@@ -131,8 +131,8 @@
 							<div class="media">
 								<img src="assets/images/sapw-info-icon1.png" class="mr-3">
 								<div class="media-body">
-									<h3 class="mt-0">Matches</h3>
-									<p>View matches based on your must have, good to have, optional</p>
+									<h3 class="mt-0"> {{"homePage.content6" | translate }}</h3>
+									<p> {{"homePage.content7" | translate }}</p>
 								</div>
 							</div>
 						</div>
@@ -140,8 +140,8 @@
 							<div class="media">
 								<img src="assets/images/sapw-info-icon2.png" class="mr-3">
 								<div class="media-body">
-									<h3 class="mt-0">Compare profile</h3>
-									<p>Compare multiple profiles, jobs in a single view</p>
+									<h3 class="mt-0"> {{"homePage.content8" | translate }} </h3>
+									<p>{{"homePage.content9" | translate }} </p>
 								</div>
 							</div>
 						</div>
@@ -151,8 +151,8 @@
 							<div class="media">
 								<img src="assets/images/sapw-info-icon3.png" class="mr-3">
 								<div class="media-body">
-									<h3 class="mt-0">Holistic view</h3>
-									<p> View whats missing, whats matching and whats more in a profile against your post </p>
+									<h3 class="mt-0">{{"homePage.content19" | translate }} </h3>
+									<p>{{"homePage.content10" | translate }}</p>
 								</div>
 							</div>
 						</div>
@@ -160,8 +160,8 @@
 							<div class="media">
 								<img src="assets/images/sapw-info-icon4.png" class="mr-3">
 								<div class="media-body">
-									<h3 class="mt-0">Full control</h3>
-									<p>Manage your profile what to display and what not to </p>
+									<h3 class="mt-0">{{"homePage.content11" | translate }} </h3>
+									<p>{{"homePage.content12" | translate }}</p>
 								</div>
 							</div>
 						</div>
@@ -178,8 +178,9 @@
 			<div class="row">
 				<div class="col-lg-12">
 					<div class="section-title">
-						<h1>Get in touch with us</h1>
-						<span class="section-title-bg">CONTACT </span>
+						<h1>{{"homePage.content13" | translate }} </h1>
+						<h5>{{"homePage.content14" | translate }} </h5>
+						<span class="section-title-bg"> {{"homePage.content15" | translate }}  </span>
 						<h5>&nbsp;</h5>
 					</div>
 				</div>
