--- a/frontend/src/app/shared/component/modal/forgot-password/forgot-password.component.html
+++ b/frontend/src/app/shared/component/modal/forgot-password/forgot-password.component.html
@@ -1,17 +1,17 @@
 <ng-template #fpModal let-modal>
     <div class="modal-header">
-      <h5 class="modal-title" id="ForgotPassword">Forgot Password?</h5>
+      <h5 class="modal-title" id="ForgotPassword"> {{"fotgotPassword.title" | translate }} </h5>
       <button (click)="onClickCloseBtn(false)" type="button" class="close" data-dismiss="modal" aria-label="Close">
         <span aria-hidden="true">×</span>
       </button>
     </div>
     <div class="modal-body">
       <form [formGroup]="forgotPasswordForm" (ngSubmit)="onGetResetLink()">
-        <h5 class="my-4" *ngIf="!isMailSent">Not to worry. Just fill in your email address. We shall send you a link to reset your password</h5>
+        <h5 class="my-4" *ngIf="!isMailSent">  {{"fotgotPassword.content1" | translate }} </h5>
 
         <p class="text-green mx-auto pt-1" *ngIf="isMailSent">
           <i style="font-size: 20px;" class="far fa-thumbs-up"></i>
-          Great. We shot you an email with a link for resetting your account password. Check your inbox.
+           {{"fotgotPassword.message" | translate }} 
         </p>
 
         <ng-container *ngIf="!isMailSent">
