--- a/frontend/src/app/modules/features/employer/post-job/post-job-layout/post-job-layout.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/post-job-layout/post-job-layout.component.html
@@ -13,8 +13,8 @@
   <!-- //Sub Header Section -->
 <section class="my-3" style="min-height: 970px;">
   <div class="container">
-  <h5 style="font-weight:bold">Help us serve you better!</h5><br />
-<h6>A half-completed profile is a missed opportunity. Please ensure you fill out your details completely<br /> to fit in the search criteria your potential employer is looking for!</h6><br />
+  <h5 style="font-weight:bold"> {{"postJob.title" | translate }} </h5><br />
+<h6>{{"postJob.content" | translate }}  <br /> {{"postJob.contentSubject" | translate }}  </h6><br />
     <div class="row">
       <div class="col-lg-12 tabs-animated" id="myTab">
         <form method="post" #postJobNgForm="ngForm" [formGroup]="postJobForm">
