--- a/frontend/src/app/shared/component/modal/register-form/register-form.component.html
+++ b/frontend/src/app/shared/component/modal/register-form/register-form.component.html
@@ -1,13 +1,17 @@
 <ng-template #registerModal let-modal>
   <div
   class="modal-header">
-    <h5
-    class="modal-title" id="registerModalLabel">{{sharedService.getCurrentRoleFromUrl()?.roleId == 1 ? 'Recruiter' : 'Jobseeker'}} Registration</h5>
+    
+    <h5 *ngIf="router?.url.includes('employer')"
+    class="modal-title" id="registerModalLabel"> {{"employer.recruiterRegister" | translate }} </h5>
+    <h5 *ngIf="router?.url.includes('user')"
+    class="modal-title" id="registerModalLabel"> {{"user.jobseekerRegister" | translate }} </h5>
     <button (click)="onClickCloseBtn(false)" type="button" class="close" data-dismiss="modal" aria-label="Close">
       <span aria-hidden="true">×</span>
     </button>  </div>
   <div class="modal-body">
-  <p>{{sharedService.getCurrentRoleFromUrl()?.roleId == 1 ? 'You have made the right decision. You are just a step away from hiring the best potential talent. Fill in and move forward' : 'You are one step away from a potential opportunity that’s waiting for you. Fill in the required information and get started!'}}</p>
+  <p *ngIf="router?.url.includes('user')"> {{"user.register" | translate }} </p>
+  <p *ngIf="router?.url.includes('employer')"> {{"employer.register" | translate }}</p>
     <form method="post" [formGroup]="registerForm" (ngSubmit)="register()">
       <div class="form-group">
         <label>{{"shared.firstName" | translate }}</label>
