--- a/frontend/src/app/layout/header/header.component.html
+++ b/frontend/src/app/layout/header/header.component.html
@@ -1,34 +1,4 @@
 <header>
- <!--- <nav *ngIf="router?.url?.includes('/') && !router?.url?.includes('/employer')  && !router?.url?.includes('/home')  &&  !router?.url?.includes('/login')" class="navbar navbar-expand-lg navbar-light theme-nav">
-    <div class="container-fluid">
-      <a href="#" class="navbar-brand"><img src="assets/images/logo.png"/></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav ml-auto ">
-           <li class="nav-item dropdown bg-white">
-          <a class="btn btn-sm btn-outline-primary px-3 dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Login</a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="margin-top:23px;">						 
-            <li class="submenu"> <a class="dropdown-item" (click)="onRedirectUrl('/auth/employer/login')"  type="button">Employer</a></li>								
-            <li class="submenu"> <a class="dropdown-item" (click)="onRedirectUrl('/auth/user/login')"  type="button">Jobseeker</a></li>								
-          </ul>
-          </li>
-        </ul>
-        <ul class="navbar-nav ml-2">
-          <li class="nav-item">
-          <a href="#" class="m-1 btn btn-sm btn-secondary"><i class="fab fa-linkedin-in"></i></a>
-          </li>	
-          <li class="nav-item">
-          <a href="#" class="m-1 btn btn-sm btn-secondary"><i class="fab fa-twitter"></i></a>
-          </li>	
-          <li class="nav-item">
-          <a href="#" class="m-1 btn btn-sm btn-secondary"><i class="fab fa-facebook-f" style="width:12.25px;"></i></a>
-          </li>	
-        </ul>
-      </div>
-      </div>
-  </nav>-->
   <nav class="navbar navbar-expand-lg navbar-light theme-nav" *ngIf="!loggedUserInfo?.isLoggedIn " >
     <div class="container-fluid" *ngIf="!router?.url?.includes('/auth') && !router?.url?.includes('/user') && !router?.url?.includes('/employer')">
       <a href="#" class="navbar-brand"><img src="assets/images/logo.png"/></a>
@@ -56,31 +26,39 @@
           <a href="#" class="m-1 btn btn-sm btn-secondary"><i class="fab fa-facebook-f" style="width:12.25px;"></i></a>
           </li>	
         </ul>
+		<ul class="navbar-nav lang-icon nav-language-66" style="top: 4rem;">
+          <li class="dropdown test-{{translateService.currentLang}}">
+            <ng-container *ngFor="let lang of translateService.getLangs()">
+
+              <a (click)="onOpenLangMenu()" *ngIf="lang === translateService.currentLang"
+               class="text-capitalize dropdown-toggle" href="#" id="navbarDropdownMenuLink"  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <img [src]="onGetLangImage(lang)" width="16" class="mr-2"/>
+                 
+              </a>
+            </ng-container>
+
+
+           <ul *ngIf="isLangMenuOpen" style="position: absolute;" class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink" >
+              <ng-container *ngFor="let lang of translateService.getLangs()">
+                <li class="submenu" *ngIf="lang != translateService.currentLang">
+                  <a (click)="useLanguage(lang)" class="text-capitalize dropdown-item" href="javascript:;">
+                    <img [src]="onGetLangImage(lang)" width="16" class="mr-2"/>
+                     {{onGetLangNames(lang)}}
+                  </a>
+                </li>
+              </ng-container> 
+
+             </ul> 
+          </li>
+        </ul>
       </div>
       </div>
     <div [ngClass]="(screenWidth >= 1500)?'container-fluid':'container'" *ngIf="router?.url?.includes('/auth') ">
       <a [routerLink]="['/']" href="javascript:;" class="navbar-brand">
         <img src="assets/images/logo.png" /></a>
-      <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button> -->
-      <!-- <select #langSelect (change)="useLanguage(langSelect.value)" class="test-{{translateService.currentLang}}">
-        <option *ngFor="let lang of translateService.getLangs()" [value]="lang"
-          [selected]="lang === translateService.currentLang">{{ lang }}</option>
-      </select> -->
       <div class="collapse navbar-collapse" style="display: contents;" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
-        
-			 <!--<li class="nav-item" *ngIf="!router?.url?.includes('/employer') &&( !router?.url?.includes('/home')  &&  !router?.url?.includes('/login') ) " >
-				<a href="#" class="h5 mx-1 text-secondary"><i class="fab fa-linkedin"></i></a>
-			  </li>	
-			  <li class="nav-item" *ngIf="!router?.url?.includes('/employer')  &&( !router?.url?.includes('/home')  &&  !router?.url?.includes('/login') )" >
-				<a href="#" class="h5 mx-1 text-secondary"><i class="fab fa-twitter-square"></i></a>
-			  </li>	
-			  <li class="nav-item" *ngIf="!router?.url?.includes('/employer') &&( !router?.url?.includes('/home')   &&  !router?.url?.includes('/login') )" >
-				<a href="#" class="h5 mx-1 text-secondary"><i class="fab fa-facebook-square"></i></a>
-			  </li>	-->
+	 
           <li *ngIf="!router?.url?.includes('/employer')  && ( router?.url?.includes('/home') || router?.url?.includes('/login') )" class="nav-item mr-3 my-1">
             <a [class.disabled]="router?.url?.includes('/verify')"  (click)="onRedirectUrl('/auth/employer/login')" class="btn btn-outline-blue py-2 px-3"
               href="javascript:;">
@@ -92,13 +70,7 @@
               <i class="fas fa-user-tie pr-1 align-middle"></i> {{"header.jobseeker" | translate}}
             </a>
           </li>
-          <!-- <li *ngIf="!router?.url?.includes('/agency')" class="nav-item mr-3 my-1">
-            <a (click)="onRedirectUrl('/auth/agency/login')" class="btn btn-outline-orange py-2 px-3"
-              href="javascript:;">
-              <i class="fas fa-briefcase"></i> {{"home.staffingAgency" | translate}}
-            </a>
-          </li> -->
-        </ul>
+          </ul>
       <ul class="navbar-nav lang-icon nav-language-66">
           <li class="dropdown test-{{translateService.currentLang}}">
             <ng-container *ngFor="let lang of translateService.getLangs()">
