--- a/frontend/src/app/modules/features/employer/post-job/post-job-layout/post-job-layout.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/post-job-layout/post-job-layout.component.html
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col-lg-5">
         <ol class="breadcrumb">
-          <li class="breadcrumb-item active" aria-current="page">{{"postJob.postYourJob" | translate }}</li>
+          <li class="breadcrumb-item active" aria-current="page">{{"shared.postYourJobs" | translate }}</li>
         </ol>
       </div>
     </div>
