Image to Text changing

--- a/frontend/src/app/modules/auth/employer-auth/employer-login/employer-login.component.html
+++ b/frontend/src/app/modules/auth/employer-auth/employer-login/employer-login.component.html
@@ -4,26 +4,23 @@
     <div class="row">
       <div class="col-xl-8 col-lg-8 col-md-12 d-none d-lg-block d-xl-block pt-4 pr-5">
         <div style="position:absolute; right:5px;"><img src="assets/images/sapw-newbanner-global-img.png" class="img-fluid" ></div>
-        <ul id="scene" *ngIf="translatePage == 'en'" >
-          <li class="layer" style="width:110%;"  data-depth="0.3"><img src="assets/images/sapw-newbanner-content-img1.png" class="img-fluid"></li>
-          <li class="layer" style="width:110%;"  data-depth="0.4"><img src="assets/images/sapw-newbanner-content-img2.png" class="img-fluid"></li>
-          <li class="layer" style="width:110%;"  data-depth="0.5"><img src="assets/images/sapw-newbanner-content-img3.png" class="img-fluid"></li>
-          <li class="layer" style="width:110%;"  data-depth="0.4"><img src="assets/images/sapw-newbanner-content-img4.png" class="img-fluid"></li>
-          <li class="layer" style="width:110%;"  data-depth="0.3"><img src="assets/images/sapw-newbanner-content-img5.png" class="img-fluid"></li>
-        </ul>
-        <ul id="scene" *ngIf="translatePage == 'es'" >
-          <li class="layer" style="width:110%;"  data-depth="0.3"><img src="assets/images/sapw-newbanner-content-img1-es.png" class="img-fluid"></li>
-          <li class="layer" style="width:110%;"  data-depth="0.4"><img src="assets/images/sapw-newbanner-content-img2-es.png" class="img-fluid"></li>
-          <li class="layer" style="width:110%;"  data-depth="0.5"><img src="assets/images/sapw-newbanner-content-img3-es.png" class="img-fluid"></li>
-          <li class="layer" style="width:110%;"  data-depth="0.4"><img src="assets/images/sapw-newbanner-content-img4-es.png" class="img-fluid"></li>
-          <li class="layer" style="width:110%;"  data-depth="0.3"><img src="assets/images/sapw-newbanner-content-img5-es.png" class="img-fluid"></li>
-        </ul>
-        <ul id="scene" *ngIf="translatePage == 'de'" >
-          <li class="layer" style="width:110%;"  data-depth="0.3"><img src="assets/images/sapw-newbanner-content-img1-de.png" class="img-fluid"></li>
-          <li class="layer" style="width:110%;"  data-depth="0.4"><img src="assets/images/sapw-newbanner-content-img2-de.png" class="img-fluid"></li>
-          <li class="layer" style="width:110%;"  data-depth="0.5"><img src="assets/images/sapw-newbanner-content-img3-de.png" class="img-fluid"></li>
-          <li class="layer" style="width:110%;"  data-depth="0.4"><img src="assets/images/sapw-newbanner-content-img4-de.png" class="img-fluid"></li>
-          <li class="layer" style="width:110%;"  data-depth="0.3"><img src="assets/images/sapw-newbanner-content-img5-de.png" class="img-fluid"></li>
+        <ul id="scene" >
+          <li class="layer" style="width:110%;z-index:1;"  data-depth="0.3"><img src="assets/images/sapw-newbanner-content-img.png" class="img-fluid">
+		  <h6 class="job-title" >{{"employer.title1" | translate }}</h6>
+		  <h6 class="job-title-content">{{"employer.title1-content" | translate }}</h6>
+		  <h6 class="job-title-content1">{{"employer.title1-content1" | translate }}</h6>
+		  <h6 class="job-title2" >{{"employer.title2" | translate }}</h6>
+		  <h6 class="job-title2-content">{{"employer.title2-content" | translate }}</h6>
+		  <h6 class="job-title2-content1">{{"employer.title2-content1" | translate }}</h6>
+		  <h6 class="job-title3" >{{"employer.title3" | translate }}</h6>
+		  <h6 class="job-title3-content">{{"employer.title3-content" | translate }}</h6>
+		  <h6 class="job-title3-content1">{{"employer.title3-content1" | translate }}</h6>
+		  <h6 class="job-title4" >{{"employer.title4" | translate }}</h6>
+		  <h6 class="job-title4-content">{{"employer.title4-content" | translate }}</h6>
+		  <h6 class="job-title4-content1">{{"employer.title4-content1" | translate }}</h6>
+		  <h6 class="job-title5">{{"employer.title5" | translate }}</h6>
+		  <h6 class="job-title5-content">{{"employer.title5-content" | translate }}</h6>
+		  <h6 class="job-title5-content1">{{"employer.title5-content1" | translate }}</h6></li>
         </ul>
       </div>
       <div class="col-lg-4 col-md-12">
